--- a/app/globals.css
+++ b/app/globals.css
@@ -186,3 +186,22 @@
            w-full sm:w-auto cursor-pointer;
   }
 }
+
+
+textarea::-webkit-scrollbar {
+  width: 8px;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: var(--color-darkColor); /* your bg-darkColor */
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: var(--color-primaryColor-400); /* your primaryColor-400 */
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+textarea::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-primaryColor-600);
+}
